--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@fortawesome/pro-light-svg-icons": "^5.15.2",
     "@fortawesome/pro-regular-svg-icons": "^5.15.2",
     "@fortawesome/vue-fontawesome": "^3.0.0-3",
+    "autosize": "^4.0.2",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "dropzone": "^5.7.6",
     "moment": "^2.29.1",
     "socket.io-client": "^3.1.0",
     "ulid": "^2.3.0",
