--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@bugsnag/js": "^7.7.0",
+    "@bugsnag/plugin-vue": "^7.7.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
     "@fortawesome/pro-light-svg-icons": "^5.15.2",
     "@fortawesome/pro-regular-svg-icons": "^5.15.2",
