--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "@bugsnag/js": "^7.7.0",
     "@bugsnag/plugin-vue": "^7.7.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/pro-light-svg-icons": "^5.15.2",
     "@fortawesome/pro-regular-svg-icons": "^5.15.2",
     "@fortawesome/vue-fontawesome": "^3.0.0-3",
     "autosize": "^4.0.2",
     "axios": "^0.21.1",
+    "bootstrap": "^5.0.0-beta2",
     "core-js": "^3.6.5",
     "dropzone": "^5.7.6",
     "moment": "^2.29.1",
@@ -34,6 +36,8 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-vue": "^7.0.0-0"
+    "eslint-plugin-vue": "^7.0.0-0",
+    "node-sass": "^5.0.0",
+    "sass-loader": "^10.1.1"
   }
 }
