--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@bugsnag/js": "^7.7.0",
     "@bugsnag/plugin-vue": "^7.7.0",
     "@popperjs/core": "^2.9.1",
+    "anchorme": "^2.1.2",
     "autosize": "^4.0.2",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.0-beta2",
